--- a/css/popup.css
+++ b/css/popup.css
@@ -146,10 +146,12 @@
 
 .popupBlockTaxesFees .detailsTable THEAD TD {
 	background: #e2e6f2;
+	font-size: 11px;
 }
 
 .popupBlockTaxesFees .detailsTable TBODY TD {
 	background: #f8f8f8;
+	font-size: 11px;
 }
 
 .popupBlockTaxesFees .detailsTable TBODY .colAmount {
@@ -179,10 +181,12 @@
 
 .popupBlockSurcharges .detailsTable THEAD TD {
 	background: #e2e6f2;
+	font-size: 11px;
 }
 
 .popupBlockSurcharges .detailsTable TBODY TD {
 	background: #f8f8f8;
+	font-size: 11px;
 }
 
 .popupBlockSurcharges .detailsTable TBODY .colAmount {
@@ -295,12 +299,12 @@
 }
 
 .popupBlockFareBreakdown .detailsTable THEAD TD {
-	background: #cdecf1;
+	background: #f2f2f2;
 	font-weight: normal;
 }
 
 .popupBlockFareBreakdown .detailsTable TBODY TD {
-	background: #f3f9ff;
+	background: #ffffff;
 	border-bottom: 2px solid #FFFFFF;
 }
 
@@ -318,7 +322,6 @@
 }
 
 .popupBlockFareBreakdown .detailsTable .rowTotal .colPrice {
-	background: #cdecf1;
 	border: none;
 }
 
@@ -340,7 +343,7 @@
 }
 
 .popupBlockAirReprice .textTitle {
-	padding: 7px 0 10px 0;
+	padding: 7px 8px 10px 8px;
 	font-size: 14px;
 	font-weight: bold;
 	border: none;
@@ -1022,7 +1025,7 @@
 }
 
 .popupBlockSessionExp .textTitle {
-	padding: 10px 0 15px 0;
+	padding: 10px 8px 15px 8px;
 	font-size: 14px;
 	font-weight: bold;
 	border: none;
@@ -1179,7 +1182,8 @@
 
 .blockChatReference .bodyBlock {
 	background: url(../pictures/misc/form_sep.gif) repeat-x left bottom;
-	font: bold 12px Verdana;
+	font-size: 12px;
+	font-weight: bold;
 	padding: 15px 30px 20px 30px;
 }
 
@@ -1190,12 +1194,12 @@
 
 .blockChatOption .bodyBlock {
 	background: url(../pictures/misc/form_sep.gif) repeat-x left bottom;
-	font: 10px Verdana;
 	padding: 10px 30px 15px 30px;
 }
 
 .blockChatOption .bodyBlock A {
-	font: bold 12px Verdana;
+	font-size: 12px;
+	font-weight: bold;
 	text-decoration: none;
 }
 
