Minor fixes applied
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7798 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -1994,7 +1994,7 @@
 .passengerInfoBlock .footnote {
 	font-size: 10px;
 	color: #666666;
-	padding: 5px 0 10px 0;
+	padding: 5px 8px 10px 8px;
 }
 
 .passengerInfoBlock .footnote SUP.ref {
