--- a/css/flows.css
+++ b/css/flows.css
@@ -28,7 +28,7 @@
 }
 
 #pgItinerarySummary #fbTripPlanner .formBlock {
-	margin: 0 0 8px 0; 
+	margin: 0 8px 8px 8px; 
 }
 
 #pgItinerarySummary #fbTripPlanner .formLabelElement {
