--- a/css/flight-selection.css
+++ b/css/flight-selection.css
@@ -582,8 +582,9 @@
 	border-right: 1px solid #FFFFFF;	
 	border-bottom: 1px solid #cccccc;
 	background-color: #0063ab;
-	padding: 2px 0 4px 0;
+	padding: 4px 0 6px 0;
 	font-weight: bold;
+	font-size: 12px;
 	color: #ffffff;
 	text-align: center;
 }
@@ -596,6 +597,7 @@
 	border-bottom: 1px solid #cccccc;
 	border-left: 1px solid #bfb5bf;
 	background-color: #e3f1ff;
+	font-size: 12px;
 	text-align: center;
 	cursor: default;
 }
@@ -794,6 +796,7 @@
 	background: #0063ab;
 	border-right: 1px solid #FFFFFF;
 	border-bottom: 1px solid #FFFFFF;
+	font-size: 12px;
 	padding: 1px 0 2px 0;
 	text-align: center;
 	color: #FFFFFF;
@@ -821,6 +824,7 @@
 	background: #f3f9ff;
 	border-right: 1px solid #b2b2b2;
 	border-bottom: 1px solid #b2b2b2;
+	font-size: 12px;
 	cursor: pointer;
 	cursor: hand;
 }
