Removed "Proceed Options" block, "Allocated Cart Items" block and "Manage Your Reservation" block
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7811 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -1642,7 +1642,7 @@
 /* Proceed Options Block  */
 
 .proceedOptionsBlock {
-	
+	display: none;
 }
 
 .proceedOptionsBlock .headBlock {
@@ -1915,6 +1915,10 @@
 .confirmationInfoBlock .colManage {
 	width: 52%;
 	font: 12px Arial;
+}
+
+.confirmationInfoBlock .colManage DIV {
+	display: none;
 }
 
 .confirmationInfoBlock .colManage .option {
