--- a/css/blocks.css
+++ b/css/blocks.css
@@ -1996,6 +1996,16 @@
 	width: 100px;
 }
 
+.passengerInfoBlock .details .seatsDescr td {
+	background: url(../pictures/icons/seats/i_conf_seat.gif) no-repeat center top;
+	width: 30px;
+}
+
+.passengerInfoBlock .details .seatsDescr div {
+	padding: 20px 2px 0 2px;
+	text-align: center;	
+}
+
 .passengerInfoBlock .footnote {
 	font-size: 10px;
 	color: #666666;
