update of exit row terms popup
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7892 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/css/popup.css
+++ b/css/popup.css
@@ -609,7 +609,8 @@
 .popupBlockExitRowTerms .exitRowTermsInfo {
 	font: 10px Verdana;
 	border: 1px solid #bfb5bf;
-	height: 400px;
+	height: 180px;
+	overflow: auto;
 }
 
 .popupBlockExitRowTerms .exitRowTermsInfo .bodyBlock {
