Updated "Insurance Cross Sell" block: added "Policy Number" string
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7902 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -2552,6 +2552,10 @@
 	padding: 2px 8px 10px 0;
 }
 
+.insuranceCrossSell .colInfo .policyNum {
+	font-weight: bold;
+}
+
 .blockInsuranceCrossSell .componentTotal {
 	padding: 0 0 7px 0;
 }
