Updated "Insurance Cross Sell" block: added paragraphs
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7903 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -2549,7 +2549,11 @@
 
 .insuranceCrossSell .colInfo {
 	width: 100%;
-	padding: 2px 8px 10px 0;
+	padding: 2px 8px 0 0;
+}
+
+.insuranceCrossSell .colInfo P {
+	padding: 0 0 10px 0;
 }
 
 .insuranceCrossSell .colInfo .policyNum {
