bugfixing under safari 2.0.x
.cdrContent table {
	width: 100%;
}

git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@8256 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -68,6 +68,10 @@
 	clear: both;	
 }
 
+.cdrContent table {
+	width: 100%;
+}
+
 .cdrContent td, .cdrContent th {
 	text-align: center;
 	vertical-align: middle;
