update sevicesTabs (bug with span)
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@8735 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -1113,8 +1113,7 @@
 }
 
 .servicesTabs A,
-.servicesTabs A:hover,
-.servicesTabs SPAN {
+.servicesTabs A:hover {
 	display: block;
 	text-decoration: none;
 	color: #000;
