BUG FIXING ALL BRANDS: TDP-21410 - footnotes
Old:

.flightSelectionByAirline .resultsArea .footnote {

      padding: 2px 4px 0 4px;

      font: 10px Verdana;

      color: #000000;

}

 

New:

.flightSelectionByAirline .resultsArea .footnote {

      padding: 2px 4px 2px 4px;

      font: 10px Verdana;

      color: #000000;

}


git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@9055 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/css/flight-selection.css
+++ b/css/flight-selection.css
@@ -237,7 +237,7 @@
 }
 
 .flightSelectionByAirline .resultsArea .footnote {
-	padding: 4px 4px 0 4px;
+	padding: 4px 4px 2px 4px;
 	font: 11px Arial;
 	color: #666666;
 }
@@ -435,7 +435,7 @@
 
 
 .flightSelectionByAirlineNoFF .resultsArea .footnote {
-	padding: 4px 4px 0 4px;
+	padding: 4px 4px 2px 4px;
 	font: 11px Arial;
 	color: #666666;
 }
@@ -1043,7 +1043,7 @@
 }
 
 .flightSelectionSchedule .footnote {
-	padding: 4px 0 0 0;
+	padding: 4px 0 2px 0;
 	font-size: 11px;
 	color: #666666;
 }
