PROTOTYPE: wcag.css prototype import refactoring. (core file in XHTML-CUC-DEMO) [SITA-SASS temporary skipped]
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@15870 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/css/all.css
+++ b/css/all.css
@@ -11,3 +11,6 @@
 @import url("popup.css");
 @import url("profile.css");
 @import url("static.css");
+
+/* general styles for wai-aria markup */
+@import url("../../XHTML-CUC-DEMO/css/wcag.css");
